--- a/app/src/main/assets/daum.html
+++ b/app/src/main/assets/daum.html
@@ -85,7 +85,7 @@ function onReceivedActivityMessageViaJavascriptInterface(json){
                     fullRoadAddr += extraRoadAddr;
                 }				
 
-				window.Android.processDATA(data.zonecode + ", " + fullRoadAddr);
+				window.Android.processDATA(data.zonecode, data.roadAddress, data.buildingName);
             },
             width : '100%',
             height : '100%'
