--- a/app/src/main/assets/daumapi.html
+++ b/app/src/main/assets/daumapi.html
@@ -3,10 +3,9 @@
 
 <html>
 <head>
-</head>
-<body>
-<script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
-<script>
+    <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
+    <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
+    <script>
     new daum.Postcode({
         oncomplete: function(data) {
             if(data.userSelectedType=="R"){
@@ -18,5 +17,8 @@
         }
     }).open();
 </script>
+</head>
+<body>
+
 </body>
 </html>
