--- a/app/src/main/assets/daum.html
+++ b/app/src/main/assets/daum.html
@@ -4,6 +4,7 @@
 <head>
 </head>
 <body>
+여기나오니ㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣ
 
 <!-- iOS에서는 position:fixed 버그가 있음, 적용하는 사이트에 맞게 position:absolute 등을 이용하여 top,left값 조정 필요 -->
 <div id="layer" style="display:block;position:fixed;overflow:hidden;z-index:1;-webkit-overflow-scrolling:touch;">
@@ -24,18 +25,6 @@ function onReceivedPostMessage(event){
      console.log("onReceivedPostMessage "+event);
 }
 
-window.addEventListener("postMessage", onReceivedPostMessage2, false);
-
-function onReceivedPostMessage2(event){
-     //..ex deconstruct event into action & params
-     var action = event.data.action;
-     var params = event.data.params;
-
-     console.log("onReceivedPostMessage "+event);
-
-}
-
-
 function onReceivedActivityMessageViaJavascriptInterface(json){
      //..ex deconstruct data into action & params
      var data = JSON.parse(json);
@@ -48,7 +37,7 @@ function onReceivedActivityMessageViaJavascriptInterface(json){
     // 우편번호 찾기 화면을 넣을 element
     var element_layer = document.getElementById('layer');
 
-    function sample2_execDaumPostcode() {
+    function DaumPostcode() {
         new daum.Postcode({
             oncomplete: function(data) {
 			
