--- a/app/src/main/assets/daum.html
+++ b/app/src/main/assets/daum.html
@@ -4,7 +4,6 @@
 <head>
 </head>
 <body>
-여기나오니ㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣ
 
 <!-- iOS에서는 position:fixed 버그가 있음, 적용하는 사이트에 맞게 position:absolute 등을 이용하여 top,left값 조정 필요 -->
 <div id="layer" style="display:block;position:fixed;overflow:hidden;z-index:1;-webkit-overflow-scrolling:touch;">
@@ -37,7 +36,7 @@ function onReceivedActivityMessageViaJavascriptInterface(json){
     // 우편번호 찾기 화면을 넣을 element
     var element_layer = document.getElementById('layer');
 
-    function DaumPostcode() {
+    function sample2_execDaumPostcode() {
         new daum.Postcode({
             oncomplete: function(data) {
 			
@@ -84,7 +83,7 @@ function onReceivedActivityMessageViaJavascriptInterface(json){
                     fullRoadAddr += extraRoadAddr;
                 }				
 
-				window.Android.processDATA(data.zonecode, data.roadAddress, data.buildingName);
+				window.Android.returnData(data.zonecode, data.roadAddress, data.buildingName);
             },
             width : '100%',
             height : '100%'
